fixed toolbar layout when on mobile format
The dropdowns are set to "open" all the time, this way their subitems render properly in mobile format.

--- a/web-ui/src/main/resources/catalog/views/default/less/gn_navbar_default.less
+++ b/web-ui/src/main/resources/catalog/views/default/less/gn_navbar_default.less
@@ -22,6 +22,9 @@
           font-size: 0.9em;
         }
       }
+      &.open > .dropdown-toggle {
+        background: none;
+      }
       ul {
         display: none;
       }
@@ -45,4 +48,5 @@
 }
 .navbar-form {
   border:none;
+  margin: 8px 0px;
 }
